docs/envoy/v1.35.13/_sources/api-v3/config/core/v3/http_service.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/core/v3/http_service.proto:

HTTP services (proto)
=====================






.. _envoy_v3_api_msg_config.core.v3.HttpService:

config.core.v3.HttpService
--------------------------


:repo:`[config.core.v3.HttpService proto] <api/envoy/config/core/v3/http_service.proto#L19>`

HTTP service configuration.



.. code-block:: json
  :force:

  {
    "http_uri": {...},
    "request_headers_to_add": []
  }

.. _envoy_v3_api_field_config.core.v3.HttpService.http_uri:


http_uri
  (:ref:`config.core.v3.HttpUri <envoy_v3_api_msg_config.core.v3.HttpUri>`) The service's HTTP URI. For example:

  .. code-block:: yaml

     http_uri:
       uri: https://www.myserviceapi.com/v1/data
       cluster: www.myserviceapi.com|443



.. _envoy_v3_api_field_config.core.v3.HttpService.request_headers_to_add:


request_headers_to_add
  (**repeated** :ref:`config.core.v3.HeaderValueOption <envoy_v3_api_msg_config.core.v3.HeaderValueOption>`) Specifies a list of HTTP headers that should be added to each request
  handled by this virtual host.


